Release history for Perl module MooseX::App

1.32 2015-?-?
    - Improved Term Plugin (History, Delete, Pasting, Pos1/End, Cursors)
    - Documentation
    - Added app_command_register

1.31 2015-02-08
    - Dist cleanup (Sergey Romanov)
    - Moose cleanups (Sawyer X)
    - Fixed TERM plugin input
    - Coercion for ENV variables (Roman F.)
    - Refactor handling of boolean values
    - Allow for empty values
    - Add cmd_count option for counter attributes

1.30 2014-08-24
    - Better error message if command was not specified
    - Help improved
    - Term plugin
    - Deprecate Env plugin; Now in core
    - Fix broken usage in M::A::Simple
    - Fix documentation being parsed called multiple times

1.29 2014-08-05
    - Documentation improvements and fixups
    - Better error messages if type constraints fail
    - Better suggestions in case of errors
    - Handle enum type constraints in usage info
    - Display application documentation

1.28 2014-03-25
    - Fix failing tests (reported by Michael Greb and Dagfinn Ilmari Mannsåker)

1.27 2014-03-02
    - Fix warnings on warnings on 5.18 again
    - Documentation
    - Fix spelling (fixed by Gregor Herrmann)
    
1.26 2014-02-24
    - Fix failing tests

1.25 2014-02-23
    - Allow multiple command namespaces (Thilo Fester)
    - Documentation

1.24 2014-02-14
    - Fix POD warnings (fixed by David Golden)
    - Always reuse existing MooseX::App::ParsedArgv instances
    - Parse @ARGV as soon as possible
    - Fix Win32 colorisation issues (fixed by J.R. Mash)
    - Add app_prefer_commandline option

1.23 2014-01-27
    - Documentation
    - Manual plugin
    - More inheritance tests
    - Cleanup deprecated code

1.22 2013-05-24
    - Silence experimental::smartmatch warnings on 5.18 (fixed by Mike Doherty)

1.21 2013-04-13
    - Fix option sorting
    - Fix parsing of positional parameters

1.20 2013-04-08
    - Add cmd_split and cmd_position option
    - Fixed parameter position (fixed by Yanick Champoux)